<resources>
    <string name="app_name">Rick And Morty</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>">
    <string name="details">Details</string>">

    <string name="no_connection">No connection</string>

    <string name="label_name">Name</string>
    <string name="label_status">Status</string>
    <string name="label_species">Species</string>
    <string name="label_gender">Gender</string>
    <string name="label_origin">Origin</string>
    <string name="label_location">Location</string>
</resources>